// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > Snapshot > matches snapshot for default variant 1`] = `
<span
  class="text-foreground text-base font-normal"
>
  Default Text
</span>
`;

exports[`Text > Snapshot > matches snapshot for large bold text 1`] = `
<span
  class="text-foreground text-lg font-bold"
>
  Large Bold Text
</span>
`;

exports[`Text > Snapshot > matches snapshot for muted variant 1`] = `
<span
  class="text-base font-normal text-muted-foreground"
>
  Muted Text
</span>
`;
